--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@ var _hmt = _hmt || [];
 <div>
 <p><strong>Dear reader, welcome to my site.</strong> </p>
 <p> &ensp; </p>
-<p>Hello! I&#39;m Stephen. Thank you for stopping by my site.</p>
+<p>Hello! I&#39;m Ricky. Thank you for stopping by my site.</p>
 <p> &ensp; </p>
 <p>I&#39;m a serial side project maker. In the last 12 years, I&#39;ve started 13 side projects in many different areas. Few are wildly popular. Many are dead. Several of them are still hanging around today. </p>
 <p> &ensp; </p>
