--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ var _hmt = _hmt || [];
       x.style.display = "none";
     }
   </script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.loli.net/icon?family=Material+Icons" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/homepage.css?v=20190803" crossorigin="anonymous">
