--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -90,6 +90,11 @@ var _hmt = _hmt || [];
 </tr>
 
 <tr>
+    <td><a href="/vlog/2021-04-30-life-film-lt.html"><cite>life photo | Pinky</cite></a></td>
+    <td class="right"><time>2021-02-30</time></td>
+</tr>
+
+<tr>
     <td><a href="/vlog/2021-02-20-life-photo-usa.html"><cite>life photo | usa</cite></a></td>
     <td class="right"><time>2021-02-20</time></td>
 </tr>
