--- a/vlog/2021-04-30-life-film-lt.html
+++ b/vlog/2021-04-30-life-film-lt.html
@@ -13,7 +13,7 @@
     <meta property="og:site_name" content="The Art Gallery Guardian">
     <meta property="article:tag" content="Flim, life">
 <!--页面标题-->
-    <title>Life Film|Spring LAB</title>  
+    <title>Life Film|Pinky🍑</title>  
 <!-- 百度统计-->
 <script>
 var _hmt = _hmt || [];
@@ -57,19 +57,19 @@ var _hmt = _hmt || [];
 
         <article>
         <!--文章标题-->
-        <h1 id="article-title">Life Film|Spring LAB</h1>
+        <h1 id="article-title">Life Film|Pinky 🍑</h1>
         <br>
 <div>
 	
        <center>
-    <video width="98%" poster="https://tva1.sinaimg.cn/large/008eGmZEly1gp872e67vfj31il0u01l0.jpg" controls="controls">
-      <source src="https://ks-xpc17.xpccdn.com/f3cd5060-a2a9-4a0a-832c-f2429299e740.mp4" type="video/mp4" />
+    <video width="98%" poster="https://tva1.sinaimg.cn/large/008i3skNgy1gw0157lvoxj31fy0oggod.jpg" controls="controls">
+      <source src="https://ks-xpc4.xpccdn.com/9234fca7-6b1f-4c1e-83a9-b252033b3c86.mp4" type="video/mp4" />
       </object>
     </video>
 	</center>   
     <br>
 	</br>  
-	    <center> <strong><em>LAB 2021</em></strong> </center>   
+	    <center> <strong><em>🍑</em></strong> </center>   
             <br>
 	</br>
     <!-- Gd-ad-text -->
