--- a/pages/film.html
+++ b/pages/film.html
@@ -71,6 +71,7 @@ var _hmt = _hmt || [];
               <td><a href="/pages/filmpage/film-01roll.html"><cite>01 | Kodak ColorPlus200</cite></a></td>
               <td class="right"><time>2020-2021</time></td>  
           </tr> 	
+
         </tbody>
         </table> 
         <br></br>
@@ -78,6 +79,20 @@ var _hmt = _hmt || [];
 	        <center>
          <a href="/pages/filmpage/film-01roll.html"> <img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/takepic.svg"/></a>
           </center>  
+
+          <center>
+            <strong> 
+        <a href='https://link.ruiprime.cn/icloud-photo'>𝘐𝘴 𝘭𝘪𝘧𝘦 𝘢𝘭𝘸𝘢𝘺𝘴 𝘵𝘩𝘪𝘴 𝘩𝘢𝘳𝘥, 
+          𝘰𝘳 𝘪𝘴 𝘪𝘵 𝘫𝘶𝘴𝘵 𝘸𝘩𝘦𝘯 𝘺𝘰𝘶'𝘳𝘦 𝘢 𝘬𝘪𝘥?</a>	
+             </strong>	      
+         </center>	
+
+          <center>
+            <strong> 
+        <a href='https://link.ruiprime.cn/icloud-photo'>ᵕ̈ ɴɪᴄᴇ 🌵 ᵕ̈</a>	
+             </strong>	      
+         </center>	
+
 
             <!--文章末尾-->
       
