--- a/pages/film.html
+++ b/pages/film.html
@@ -77,22 +77,27 @@ var _hmt = _hmt || [];
         <br></br>
         <br></br>
 	        <center>
-         <a href="/pages/filmpage/film-01roll.html"> <img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/takepic.svg"/></a>
+         <a href="https://link.ruiprime.cn/icloud-photo"> <img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/takepic.svg"/></a>
           </center>  
-
+          <br></br>
+          <br></br>
           <center>
             <strong> 
         <a href='https://link.ruiprime.cn/icloud-photo'>𝘐𝘴 𝘭𝘪𝘧𝘦 𝘢𝘭𝘸𝘢𝘺𝘴 𝘵𝘩𝘪𝘴 𝘩𝘢𝘳𝘥, 
           𝘰𝘳 𝘪𝘴 𝘪𝘵 𝘫𝘶𝘴𝘵 𝘸𝘩𝘦𝘯 𝘺𝘰𝘶'𝘳𝘦 𝘢 𝘬𝘪𝘥?</a>	
              </strong>	      
          </center>	
-
+         <br></br>
+         <br></br>
           <center>
             <strong> 
         <a href='https://link.ruiprime.cn/icloud-photo'>ᵕ̈ ɴɪᴄᴇ 🌵 ᵕ̈</a>	
              </strong>	      
          </center>	
-
+         <br></br>
+         <br></br>
+         <br></br>
+        <br></br>
 
             <!--文章末尾-->
       
