--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -65,7 +65,7 @@ var _hmt = _hmt || [];
 <tbody>
 	
  <tr>
-    <td><a href="https://sourl.cn/nUB6BK" target="_blank"  ><cite>Wechat Channel</cite></a></td>
+    <td><a href="https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzUyNzQwMjkyMA==&action=getalbum&album_id=1798211811293396994&channel_session_id=&sessionid=1594770113&scene=168&subscene=136" target="_blank"  ><cite>Wechat Channel</cite></a></td>
     <td class="right"><time>2016-07-01</time></td>
 </tr>
 	
