--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@ var _hmt = _hmt || [];
   <link rel="stylesheet" href="/css/homepage.css?v=20190803" crossorigin="anonymous">
 </head>
 	
-	
+
+
+
+
 <body>
 <div class="container">
 <div class="person" itemscope="" itemtype="http://schema.org/Person">
@@ -154,6 +157,34 @@ var _hmt = _hmt || [];
   </div>
   
 	
+  <!-- Development of a novel chemokine signaling-based multigene signature to predict prognosis and therapeutic response in colorectal cancer -->
+  <div class="cv-selected row cv-entry" id="kdepots">
+    <input type="checkbox" class="abstract-guard" id="kdepots-toggle">
+    <div class="cv-left">
+        <label class="showmore material-icons" for="kdepots-toggle"></label>
+        <a href="http://www.jzus.zju.edu.cn/oldversion/opentxt.php?doi=10.1631/jzus.B2100412" target="_blank" ><i class="material-icons">description</i></a>
+        <a href="https://pubmed.ncbi.nlm.nih.gov/34904417/" target="_blank" ><i class="material-icons">airplay</i></a>
+    </div>
+    <div class="cv-right">
+      <cite class="paper-title">Development of a novel chemokine signaling-based multigene signature to predict prognosis and therapeutic response in colorectal cancer</cite>
+      <ul class="coauthor-list">
+        <li>
+            <a href="http://scls.usts.edu.cn/szdw1/zzjs.htm" target="_blank" >Xin Qi</a></li></ul>
+      <p><em>
+        Zhejiang University-SCIENCE B (Biomedicine & Biotechnology)  <time>2021</time>.
+      </em><p>
+    </div>
+    <div class="abstract">
+   <li>
+    Colorectal cancer (CRC) is the most lethal gastrointestinal cancer in both males and females worldwide (Sung et al., 2021). Because of the high heterogeneity of tumors, robust prognostic biomarkers are urgently needed in CRC management (Koncina et al., 2020). Chemokine signaling is a well-known pivotal player in immunity, inflammation, and cancer metastasis (Lacalle et al., 2017; Poeta et al., 2019; Do et al., 2020), and multiple genes involved in chemokine signaling have been demonstrated as potential prognostic biomarkers for CRC (Cabrero-De Las Heras and Martínez-Balibrea, 2018; Ottaiano et al., 2020; Yu et al., 2020). Therefore, the aim of our study was to develop a chemokine signaling-based multigene signature (CSbMgSig) that could effectively predict overall survival (OS) and therapeutic response for patients with CRC.
+  </li> 
+	  
+	  </div>
+  </div>
+  
+
+
+
 	
   
   <!-- Thesis -->
