--- a/index.html
+++ b/index.html
@@ -70,8 +70,6 @@ var _hmt = _hmt || [];
 	
 
 
-
-
 <body>
 <div class="container">
 <div class="person" itemscope="" itemtype="http://schema.org/Person">
@@ -126,10 +124,10 @@ var _hmt = _hmt || [];
 <div class="cv-non-selected row pubtypeheader">Journal Publications</div>
 	
   <!-- A ferroptosis-related gene signature identified as a novel prognostic biomarker for colon cancer -->
-  <div class="cv-selected row cv-entry" id="kdepots">
-    <input type="checkbox" class="abstract-guard" id="kdepots-toggle">
+  <div class="cv-selected row cv-entry" id="ferroptosis">
+    <input type="checkbox" class="abstract-guard" id="ferroptosis-toggle">
     <div class="cv-left">
-        <label class="showmore material-icons" for="kdepots-toggle"></label>
+        <label class="showmore material-icons" for="ferroptosis-toggle"></label>
         <a href="files/paper/fgene-12-692426.pdf" target="_blank" ><i class="material-icons">description</i></a>
         <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8280527/" target="_blank" ><i class="material-icons">airplay</i></a>
     </div>
@@ -158,10 +156,10 @@ var _hmt = _hmt || [];
   
 	
   <!-- Development of a novel chemokine signaling-based multigene signature to predict prognosis and therapeutic response in colorectal cancer -->
-  <div class="cv-selected row cv-entry" id="kdepots">
-    <input type="checkbox" class="abstract-guard" id="kdepots-toggle">
+  <div class="cv-selected row cv-entry" id="chemokine">
+    <input type="checkbox" class="abstract-guard" id="chemokine-toggle">
     <div class="cv-left">
-        <label class="showmore material-icons" for="kdepots-toggle"></label>
+        <label class="showmore material-icons" for="chemokine-toggle"></label>
         <a href="http://www.jzus.zju.edu.cn/oldversion/opentxt.php?doi=10.1631/jzus.B2100412" target="_blank" ><i class="material-icons">description</i></a>
         <a href="https://pubmed.ncbi.nlm.nih.gov/34904417/" target="_blank" ><i class="material-icons">airplay</i></a>
     </div>
@@ -169,48 +167,25 @@ var _hmt = _hmt || [];
       <cite class="paper-title">Development of a novel chemokine signaling-based multigene signature to predict prognosis and therapeutic response in colorectal cancer</cite>
       <ul class="coauthor-list">
         <li>
-            <a href="http://scls.usts.edu.cn/szdw1/zzjs.htm" target="_blank" >Xin Qi</a></li></ul>
+            <a href="http://scls.usts.edu.cn/szdw1/zzjs.htm" target="_blank" >Xin Qi</a></li>
+            <li>
+              <a href="http://scls.usts.edu.cn/szdw1/zzjs.htm" target="_blank" >Jiajia Chen</a></li>
+          
+          </ul>
       <p><em>
-        Zhejiang University-SCIENCE B (Biomedicine & Biotechnology)  <time>2021</time>.
+        Zhejiang University-SCIENCE B   <time>2021</time>.
       </em><p>
     </div>
     <div class="abstract">
-   <li>Colorectal cancer (CRC) is the most lethal gastrointestinal cancer in both males and females worldwide (Sung et al., 2021). Because of the high heterogeneity of tumors, robust prognostic biomarkers are urgently needed in CRC management (Koncina et al., 2020). Chemokine signaling is a well-known pivotal player in immunity, inflammation, and cancer metastasis (Lacalle et al., 2017; Poeta et al., 2019; Do et al., 2020), and multiple genes involved in chemokine signaling have been demonstrated as potential prognostic biomarkers for CRC (Cabrero-De Las Heras and Martínez-Balibrea, 2018; Ottaiano et al., 2020; Yu et al., 2020). Therefore, the aim of our study was to develop a chemokine signaling-based multigene signature (CSbMgSig) that could effectively predict overall survival (OS) and therapeutic response for patients with CRC.</li> 
+   <li>
+    Colorectal cancer (CRC) is the most lethal gastrointestinal cancer in both males and females worldwide (Sung et al., 2021). Because of the high heterogeneity of tumors, robust prognostic biomarkers are urgently needed in CRC management (Koncina et al., 2020). Chemokine signaling is a well-known pivotal player in immunity, inflammation, and cancer metastasis (Lacalle et al., 2017; Poeta et al., 2019; Do et al., 2020), and multiple genes involved in chemokine signaling have been demonstrated as potential prognostic biomarkers for CRC (Cabrero-De Las Heras and Martínez-Balibrea, 2018; Ottaiano et al., 2020; Yu et al., 2020). Therefore, the aim of our study was to develop a chemokine signaling-based multigene signature (CSbMgSig) that could effectively predict overall survival (OS) and therapeutic response for patients with CRC.
+    </li> 
 	  
 	  </div>
   </div>
   
 
-<!-- A ferroptosis-related gene signature identified as a novel prognostic biomarker for colon cancer -->
-<div class="cv-selected row cv-entry" id="kdepots">
-  <input type="checkbox" class="abstract-guard" id="kdepots-toggle">
-  <div class="cv-left">
-      <label class="showmore material-icons" for="kdepots-toggle"></label>
-      <a href="files/paper/fgene-12-692426.pdf" target="_blank" ><i class="material-icons">description</i></a>
-      <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8280527/" target="_blank" ><i class="material-icons">airplay</i></a>
-  </div>
-  <div class="cv-right">
-    <cite class="paper-title">A ferroptosis-related gene signature identified as a novel prognostic biomarker for colon cancer</cite>
-    <ul class="coauthor-list">
-      <li>
-          <a href="http://scls.usts.edu.cn/szdw1/zzjs.htm" target="_blank" >Xin Qi</a></li></ul>
-    <p><em>
-        Frontiers in Genetics <time>2021</time>.
-    </em><p>
-  </div>
-  <div class="abstract">
- <li>
- Background: Colon cancer (CC) is a common gastrointestinal malignant tumor with high heterogeneity in clinical behavior and response to treatment, making individualized survival prediction challenging. Ferroptosis is a newly discovered iron-dependent cell death that plays a critical role in cancer biology. Therefore, identifying a prognostic biomarker with ferroptosis-related genes provides a new strategy to guide precise clinical decision-making in CC patients.
- </li> <li>
- Methods: Alteration in the expression profile of ferroptosis-related genes was initially screened in GSE39582 dataset involving 585 CC patients. Univariate Cox regression analysis and LASSO-penalized Cox regression analysis were combined to further identify a novel ferroptosis-related gene signature for overall survival prediction. The prognostic performance of the signature was validated in the GSE17536 dataset by Kaplan-Meier survival curve and time-dependent ROC curve analyses. Functional annotation of the signature was explored by integrating GO and KEGG enrichment analysis, GSEA analysis and ssGSEA analysis. Furthermore, an outcome risk nomogram was constructed considering both the gene signature and the clinicopathological features.
-  </li> <li>
- Results: The prognostic signature biomarker composed of 9 ferroptosis-related genes accurately discriminated high-risk and low-risk patients with CC in both the training and validation datasets. The signature was tightly linked to clinicopathological features and possessed powerful predictive ability for distinct clinical subgroups. Furthermore, the risk score was confirmed to be an independent prognostic factor for CC patients by multivariate Cox regression analysis ( p value < 0.05). Functional annotation analyses showed that the prognostic signature was closely correlated with pivotal cancer hallmarks, particularly cell cycle, transcriptional regulation, and immune-related functions. Moreover, a nomogram with the signature was also built to quantify outcome risk for each patient.
-  </li> <li>
- Conclusion: The novel ferroptosis-related gene signature biomarker can be utilized for predicting individualized prognosis, optimizing survival risk assessment and facilitating personalized management of CC patients. 
-  </li>
-  
-  </div>
-</div>
+
 
 	
   
@@ -227,6 +202,4 @@ var _hmt = _hmt || [];
 	  
 	
 </body>
-
-
 </html>
