--- a/pages/software--center.html
+++ b/pages/software--center.html
@@ -16,17 +16,46 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-  
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+crossorigin="anonymous"></script>
  
 </head>
-	
+
+
 
 
 <body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+  crossorigin="anonymous"></script>
+<!-- softwarecenter -->
+<ins class="adsbygoogle"
+  style="display:block"
+  data-ad-client="ca-pub-1293855853975663"
+  data-ad-slot="4575083999"
+  data-ad-format="auto"
+  data-full-width-responsive="true"></ins>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
     <iframe id='test' width='100%' src='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036' frameborder=0 'allowfullscreen'></iframe>
     <script type="text/javascript">
     document.getElementById("test").style.height=document.getElementById("test").scrollWidth*0.75+"px";
     </script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
+<!-- softwarecenter -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="4575083999"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 </body>
