--- a/index.html
+++ b/index.html
@@ -192,7 +192,29 @@ var _hmt = _hmt || [];
   <!-- Thesis -->
 <div class="cv-non-selected row pubtypeheader">Thesis</div>
   
- 
+ <!-- Construction and analysis of the ferroptosis-related risk model predicting prognosis of colon cancer -->
+ <div class="cv-selected row cv-entry" id="thesis">
+  <input type="checkbox" class="abstract-guard" id="thesis-toggle">
+  <div class="cv-left">
+      <label class="showmore material-icons" for="thesis-toggle"></label>
+      <a href="https://mc.panbaidu.cn/xm/16016/20220104/61d3e7acd44a1CLSUFFruiwang-Undergraduate%20Thesis.pdf" target="_blank" ><i class="material-icons">description</i></a>
+      <a href="https://mc.panbaidu.cn/xm/16016/20220104/61d3e7acd44a1CLSUFFruiwang-Undergraduate%20Thesis.pdf" target="_blank" ><i class="material-icons">airplay</i></a>
+  </div>
+  <div class="cv-right">
+    <cite class="paper-title">Construction and analysis of the ferroptosis-related risk model predicting prognosis of colon cancer</cite>
+    <ul class="coauthor-list">
+      <li>
+          <a href="http://scls.usts.edu.cn/szdw1/zzjs.htm" target="_blank" >Rui Wang</a></li></ul>
+    
+  </div>
+  <div class="abstract">
+ <li>
+  To construct a ferroptosis-related prognostic risk model for overall survival prediction in colon cancer, the present study first downloaded 260 ferroptosis-related genes from the public FerrDb database. Then, differentially expressed ferroptosis-related genes were identified based on the GSE39582 dataset containing 585 patients with colon cancer. LASSO-penalized Cox regression analysis was used to construct a ferroptosis-related gene signature to predict the overall survival of colon cancer patients. The prognostic performance of the signature was validated in the GSE17536 dataset. The results showed that the constructed prognostic model could accurately discriminate high-risk and low-risk patients with colon cancer in both the training and validation datasets. The model possessed powerful predictive ability for distinct clinical subgroups, and was confirmed to be an independent prognostic factor for colon cancer patients. Functional annotation analyses showed that the prognostic signature was closely correlated with pivotal cancer hallmarks, e.g. cell cycle and immune-related functions, and patients in the high-risk group were more sensitive to anticancer drugs. Additionally, the nomogram constructed based on this model and clinical information exhibited good predictive ability. In conclusion, the constructed model can be used to predict the prognosis of colon cancer patients, and is beneficial to guide the clinical treatment of colon cancer.
+  </li>
+  
+  </div>
+</div>
+
   
 	
 	
