--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ var _hmt = _hmt || [];
 <div class="cv-non-selected row pubtypeheader">Thesis</div>
   
  <!-- Construction and analysis of the ferroptosis-related risk model predicting prognosis of colon cancer -->
- <div class="cv-selected row cv-entry" id="thesis">
+ <div class="cv-non-selected row cv-entry" id="thesis">
   <input type="checkbox" class="abstract-guard" id="thesis-toggle">
   <div class="cv-left">
       <label class="showmore material-icons" for="thesis-toggle"></label>
