--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ var _hmt = _hmt || [];
     <cite class="paper-title">Construction and analysis of the ferroptosis-related risk model predicting prognosis of colon cancer</cite>
     <ul class="coauthor-list">
       <li>
-          <a href="http://scls.usts.edu.cn/szdw1/zzjs.htm" target="_blank" >Rui Wang</a></li></ul>
+          <a href="/index.html" target="_blank" >Rui Wang</a></li></ul>
     
   </div>
   <div class="abstract">
