--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ var _hmt = _hmt || [];
     <input type="checkbox" class="abstract-guard" id="chemokine-toggle">
     <div class="cv-left">
         <label class="showmore material-icons" for="chemokine-toggle"></label>
-        <a href="http://www.jzus.zju.edu.cn/oldversion/opentxt.php?doi=10.1631/jzus.B2100412" target="_blank" ><i class="material-icons">description</i></a>
+        <a href="https://sourl.cn/7wY7cu" target="_blank" ><i class="material-icons">description</i></a>
         <a href="https://pubmed.ncbi.nlm.nih.gov/34904417/" target="_blank" ><i class="material-icons">airplay</i></a>
     </div>
     <div class="cv-right">
@@ -197,8 +197,8 @@ var _hmt = _hmt || [];
   <input type="checkbox" class="abstract-guard" id="thesis-toggle">
   <div class="cv-left">
       <label class="showmore material-icons" for="thesis-toggle"></label>
-      <a href="https://mc.panbaidu.cn/xm/16016/20220104/61d3e7acd44a1CLSUFFruiwang-Undergraduate%20Thesis.pdf" target="_blank" ><i class="material-icons">description</i></a>
-      <a href="https://mc.panbaidu.cn/xm/16016/20220104/61d3e7acd44a1CLSUFFruiwang-Undergraduate%20Thesis.pdf" target="_blank" ><i class="material-icons">airplay</i></a>
+      <a href="https://sourl.cn/FDGxKm" target="_blank" ><i class="material-icons">description</i></a>
+      <a href="https://sourl.cn/FDGxKm" target="_blank" ><i class="material-icons">airplay</i></a>
   </div>
   <div class="cv-right">
     <cite class="paper-title">Construction and analysis of the ferroptosis-related risk model predicting prognosis of colon cancer</cite>
