--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ var _hmt = _hmt || [];
     <input type="checkbox" class="abstract-guard" id="ferroptosis-toggle">
     <div class="cv-left">
         <label class="showmore material-icons" for="ferroptosis-toggle"></label>
-        <a href="files/paper/fgene-12-692426.pdf" target="_blank" ><i class="material-icons">description</i></a>
+        <a href="https://sourl.cn/FA36SB" target="_blank" ><i class="material-icons">description</i></a>
         <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8280527/" target="_blank" ><i class="material-icons">airplay</i></a>
     </div>
     <div class="cv-right">
