--- a/pages/tools-back.html
+++ b/pages/tools-back.html
@@ -77,7 +77,7 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
      
      <h3><a href='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036' target="_blank" >Update page</a></h3>
      <p> </p>
-     <p><a href='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036' target="_blank" > ↑ Subsequent updates will be based on the link above </a> </p>
+     <p><a href='/pages/software--center.html' target="_blank" > 所有的软件都整理到此链接</a> </p>
 
 
      <h3>Common software</h3>
@@ -88,7 +88,6 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 <p><a href='https://www.microsoft.com/zh-cn/edge/' target="_blank" >Microsoft Edge</a></p>
 <p><a href='https://office.qq.com/' target="_blank" >TIM</a></p>	
 <p><a href='https://thoughts.teambition.com/share/60e8699c6730c60046fdbf48' target="_blank" >Office </a> 
-<p><a href='https://www.teamviewer.cn/cn/' target="_blank" >
 <p><a href='https://www.7-zip.org/' target="_blank" >7-Zip</a> </p>
 <p><a href='https://sourl.cn/nUGiFy' target="_blank" >Internet Download Manager</a> </p>
 	
@@ -108,16 +107,9 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 <h3>Research software</h3>
 	<p> </p>
 <p><a href='https://sourl.cn/dN7Dd7' target="_blank" >Xmind ZEN</a> </p>
-<p><a href='https://sourl.cn/7vhTTb' target="_blank" >Microsoft Visio 2019 Win</a></p>
-<p><a href='https://sourl.cn/NVNP6T' target="_blank" >Deepl-translator</a> </p>
-<p><a href='https://sourl.cn/574Kzh' target="_blank" >MEGA X</a> </p>
 <p><a href='https://sourl.cn/URF5kx' target="_blank" >PDF-XChange-Editor9.0.3</a> </p>
-<p><a href='https://github.com/leovan/SciHubEVA/releases' target="_blank" >ScihubEVA</a> <a href='https://rickywang.lanzous.com/ibr6llg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr6kcb' target="_blank" >Mac</a></p>
-<p><a href='http://www.eudic.net/v4/en/app/eudic/' target="_blank" >Eudic</a> </p>
-<p> <a href='https://thoughts.teambition.com/share/60e07c6527a74b004ab805e3' target="_blank" >Endnote </a>  
+<p> <a href='https://thoughts.teambition.com/share/61dd0fdc328afe0041810de2#title=Endnote' target="_blank" >Endnote </a>  
 <p><a href='https://thoughts.teambition.com/share/604f2f1de7bd040047aae2fa' target="_blank">GraphPad Prism  </a> 
-<p><a href='https://github.com/CJ-Chen/TBtools' target="_blank" >TBtools</a>  <a href='https://sourl.cn/vbxLjE' target="_blank" > Win</a>  <a href='https://sourl.cn/6YyVhT' target="_blank" >Mac</a></p>
-<p><a href='https://sourl.cn/3AzcHw' target="_blank" >SPSS</a> </p>
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
      crossorigin="anonymous"></script>
