--- a/README.html
+++ b/README.html
@@ -55,7 +55,7 @@
 </ol>
 <h1 id="notes"><span class="header-section-number">2</span> Notes</h1>
 <ul>
-<li>I made an <a href="https://gist.github.com/chaoxu/195ce33124f384a2f4e4">syntax highlighting file</a> for sublime 3, so in Markdown it can also highlight latex codes.</li>
+<li>Documentation <a href="https://doc.ruiprime.cn"></a> </li>
 </ul>
       </article>
     </main>
