--- a/README.html
+++ b/README.html
@@ -53,9 +53,13 @@
 <li>To compile just <code>Doc.hs</code>, you need <code>pandoc</code> and <code>pandoc-citeproc</code>. To compile the <code>site.hs</code>, additionally you need <code>hakyll</code>.</li>
 <li>More hacks, KaTeX offline compilation. Requires <code>jsdom</code>, <code>katex</code> and <code>node.js</code>, so <code>npm install jsdom katex</code>.</li>
 </ol>
-<h1 id="notes"><span class="header-section-number">2</span> Notes</h1>
+<h1 id="notes"><span class="header-section-number">2</span> Projects</h1>
 <ul>
-<li>Documentation <a href="https://doc.ruiprime.cn"></a> </li>
+<li> <a href="https://doc.ruiprime.cn"> Documentation</a> </li>
+<li> <a href="https://drive.ruiprime.cn"> Onedrive-List</a> </li>
+<li> <a href="https://usts.ruiprime.cn"> Search-Nav</a> </li>
+<li> <a href="https://film.ruiprime.cn"> Film Pages</a> </li>
+
 </ul>
       </article>
     </main>
