--- a/README.html
+++ b/README.html
@@ -59,8 +59,9 @@
 <li> <a href="https://drive.ruiprime.cn"> Onedrive-List</a> </li>
 <li> <a href="https://usts.ruiprime.cn"> Search-Nav</a> </li>
 <li> <a href="https://film.ruiprime.cn"> Film Pages</a> </li>
-<h1 id="notes"><span class="header-section-number">3</span> Other</h1>
-<li> <a href="https://space.bilibili.com/41648933"> <img src="https://img.shields.io/badge/dynamic/json?color=da282a&label=%E5%B0%91%E6%95%B0%E6%B4%BE%E5%85%B3%E6%B3%A8&query=%24.data.totalSubs&url=https%3A%2F%2Fapi.spencerwoo.com%2Fsubstats%2F%3Fsource%3Dsspai%26queryKey%3Dspencerwoo" />  </a> </li>
+<h1 id="notes"><span class="header-section-number">3</span> Social media</h1>
+<li> <a href="https://space.bilibili.com/41648933"  target="_blank">  <img src="https://img.shields.io/badge/dynamic/json?color=%234195D4&label=bilibili%20fans&query=%24.data.totalSubs&url=https%3A%2F%2Fapi.spencerwoo.com%2Fsubstats%2F%3Fsource%3Dbilibili%26queryKey%3D41648933" />  </a> </li>
+<a href="https://space.bilibili.com/41648933"  target="_blank">  <img src="https://img.shields.io/badge/dynamic/json?color=%234195D4&label=bilibili%20fans&query=%24.data.totalSubs&url=https%3A%2F%2Fapi.spencerwoo.com%2Fsubstats%2F%3Fsource%3Dbilibili%26queryKey%3D41648933" />  </a> 
 
 
 
