--- a/README.html
+++ b/README.html
@@ -42,7 +42,8 @@
     <main>
       <article>
         <h1 id="article-title">README</h1>
-        <h1 id="technology"><span class="header-section-number">1</span> Technology</h1>
+
+<h1 id="technology"><span class="header-section-number">1</span> Technology</h1>
 <ol type="1">
 <li>The source of the blog is on a <a href="https://github.com/biowr/biowr.github.io">git repository</a>.</li>
 <li>html files are hosted on <a href="https://pages.github.com">GitHub Pages</a>.</li>
@@ -53,19 +54,19 @@
 <li>To compile just <code>Doc.hs</code>, you need <code>pandoc</code> and <code>pandoc-citeproc</code>. To compile the <code>site.hs</code>, additionally you need <code>hakyll</code>.</li>
 <li>More hacks, KaTeX offline compilation. Requires <code>jsdom</code>, <code>katex</code> and <code>node.js</code>, so <code>npm install jsdom katex</code>.</li>
 </ol>
+
 <h1 id="notes"><span class="header-section-number">2</span> Projects</h1>
-<ul></ul>
+<ol type="1">
 <li> <a href="https://doc.ruiprime.cn"> Documentation</a> </li>
 <li> <a href="https://drive.ruiprime.cn"> Onedrive-List</a> </li>
 <li> <a href="https://usts.ruiprime.cn"> Search-Nav</a> </li>
 <li> <a href="https://film.ruiprime.cn"> Film Pages</a> </li>
-
+</ol>
 
 <h1 id="notes"><span class="header-section-number">3</span> Social media</h1>
-<ul></ul>
-
+<ol type="1">
 <a href="https://space.bilibili.com/41648933"  target="_blank">  <img src="https://img.shields.io/badge/dynamic/json?color=%234195D4&label=bilibili%20fans&query=%24.data.totalSubs&url=https%3A%2F%2Fapi.spencerwoo.com%2Fsubstats%2F%3Fsource%3Dbilibili%26queryKey%3D41648933" />  </a> 
-
+</ol>
 
 
 </ul>
