--- a/README.html
+++ b/README.html
@@ -65,7 +65,7 @@
 
 <h1 id="notes"><span class="header-section-number">3</span> Social media</h1>
 <ol type="1">
-<a href="https://weibo.com/u/7651828206"  target="_blank">  <img src="https://img.shields.io/badge/dynamic/json?label=%E5%BE%AE%E5%8D%9A%E5%85%B3%E6%B3%A8&query=%24.data.totalSubs&url=https%3A%2F%2Fapi.spencerwoo.com%2Fsubstats%2F%3Fsource%3Dweibo%26queryKey%3D7651828206&labelColor=e71f19&color=040000&logo=sina-weibo&longCache=true" />  </a> 
+<a href="https://weibo.com/u/7651828206"  target="_blank">  <img src="https://img.shields.io/badge/dynamic/json?label=Weibo&query=%24.data.totalSubs&url=https%3A%2F%2Fapi.spencerwoo.com%2Fsubstats%2F%3Fsource%3Dweibo%26queryKey%3D7651828206&labelColor=e71f19&color=040000&logo=sina-weibo&longCache=true" />  </a> 
 
 <a href="https://space.bilibili.com/41648933"  target="_blank">  <img src="https://img.shields.io/badge/dynamic/json?color=%234195D4&label=bilibili%20fans&query=%24.data.totalSubs&url=https%3A%2F%2Fapi.spencerwoo.com%2Fsubstats%2F%3Fsource%3Dbilibili%26queryKey%3D41648933" />  </a> 
 </ol>
