--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -69,6 +69,11 @@ var _hmt = _hmt || [];
     <td class="right"><time>2016-07-01</time></td>
 </tr>
 	
+<tr>
+    <td><a href="/vlog/220123-HZ"><cite> life film|Graduation</cite></a></td>
+    <td class="right"><time>2022-01-23</time></td>
+</tr>
+
  <tr>
     <td><a href="/vlog/2021-06-18-graduation.html"><cite> life film|Graduation</cite></a></td>
     <td class="right"><time>2021-06-18</time></td>
