--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -70,7 +70,7 @@ var _hmt = _hmt || [];
 </tr>
 	
 <tr>
-    <td><a href="/vlog/220123-HZ"><cite> life film|Graduation</cite></a></td>
+    <td><a href="/vlog/220123-HZ"><cite> life film|Hangzhou</cite></a></td>
     <td class="right"><time>2022-01-23</time></td>
 </tr>
 
