--- a/vlog/220123-HZ/index.html
+++ b/vlog/220123-HZ/index.html
@@ -24,7 +24,7 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-
+ <link href="https://vjs.zencdn.net/7.17.0/video-js.css" rel="stylesheet" /> 
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
  <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
@@ -61,6 +61,29 @@ var _hmt = _hmt || [];
         <br>
 <div>
 	
+  <video
+    id="my-video"
+    class="video-js"
+    controls
+    preload="auto"
+    width="98%"
+    poster="https://tva1.sinaimg.cn/large/008i3skNgy1gyni83x86yj31hc0u0mxf.jpg"
+    data-setup="{}"
+  >
+    <source src="https://ks-xpc4.xpccdn.com/6f2675a5-9a20-4804-a452-95df233e4132.mp4" type="video/mp4" />
+    <source src="https://ks-xpc4.xpccdn.com/6f2675a5-9a20-4804-a452-95df233e4132.mp4" type="video/webm" />
+    <p class="vjs-no-js">
+      To view this video please enable JavaScript, and consider upgrading to a
+      web browser that
+      <a href="https://videojs.com/html5-video-support/" target="_blank"
+        >supports HTML5 video</a
+      >
+    </p>
+  </video>
+
+
+
+
        <center>
     <video width="98%" poster="https://tva1.sinaimg.cn/large/008i3skNgy1gyni83x86yj31hc0u0mxf.jpg" controls="controls">
       <source src="https://ks-xpc4.xpccdn.com/6f2675a5-9a20-4804-a452-95df233e4132.mp4" type="video/mp4" />
