--- a/vlog/220123-HZ/index.html
+++ b/vlog/220123-HZ/index.html
@@ -82,6 +82,7 @@ var _hmt = _hmt || [];
           >
         </p>
       </video>
+      <script src="https://vjs.zencdn.net/7.17.0/video.min.js"></script>
 	</center>   
 
     <br>
