--- a/vlog/220123-HZ/index.html
+++ b/vlog/220123-HZ/index.html
@@ -68,7 +68,8 @@ var _hmt = _hmt || [];
         class="video-js"
         controls
         preload="auto"
-        width="900"
+        width="640"
+        height="264"
         poster="https://tva1.sinaimg.cn/large/008i3skNgy1gyni83x86yj31hc0u0mxf.jpg"
         data-setup="{}"
       >
