--- a/vlog/2021-06-18-graduation.html
+++ b/vlog/2021-06-18-graduation.html
@@ -62,7 +62,7 @@ var _hmt = _hmt || [];
 <div>
 	
        <center>
-    <video width="98%" poster="https://tva1.sinaimg.cn/large/008i3skNgy1grla41xvn3j31hc0u0u0z.jpg" controls="controls">
+    <video width="98%" poster="https://tva1.sinaimg.cn/large/008i3skNgy1grla41xvn3j31hc0u0u0z.jpg"  preload="auto" controls="controls">
       <source src="https://ks-xpc17.xpccdn.com/8db4ab0a-1a45-4bd7-8687-8e86b235b06f.mp4" type="video/mp4" />
       </object>
     </video>
