--- a/vlog/vlog11.html
+++ b/vlog/vlog11.html
@@ -139,7 +139,7 @@ var _hmt = _hmt || [];
 	</br>
 
             <center>       
-<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bis7frmj31lt0u0e81.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bis7frmj31lt0u0e81.jpg" preload="auto" controls="controls">
   <source src="https://sourl.cn/Utq5mR" type="video/mp4" />
   </object>
 </video>
