--- a/vlog/vlog14.html
+++ b/vlog/vlog14.html
@@ -72,8 +72,8 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bvkgyjlj31n70u0e83.jpg" controls="controls">
-  <source src="https://sourl.cn/5Ri99v" type="video/mp4" />
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bvkgyjlj31n70u0e83.jpg"  preload="auto"  controls="controls">
+  <source src="https://sourl.cn/5Ri99v"  type="video/mp4" />
   </object>
 </video>
 	  </center>   
