--- a/vlog/vlog20.html
+++ b/vlog/vlog20.html
@@ -64,7 +64,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1gh47a3ugd8j323l0u0b2c.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1gh47a3ugd8j323l0u0b2c.jpg"   preload="auto" controls="controls">
   <source src="https://wp.panbaidu.cn/xm/16016/20210502/608ec83297b74CLSUFF004-The%20summer%20solstic.mp4" type="video/mp4" />
   </object>
 </video>
