--- a/vlog/vlog3.html
+++ b/vlog/vlog3.html
@@ -74,7 +74,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7a24rwo9j315c0mo4qp.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7a24rwo9j315c0mo4qp.jpg"   preload="auto" controls="controls">
   <source src="https://sourl.cn/Eum2bD" type="video/mp4" />
   </object>
 </video>
