--- a/vlog/vlog4.html
+++ b/vlog/vlog4.html
@@ -65,7 +65,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7a4lwy2zj31mw0u01ky.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7a4lwy2zj31mw0u01ky.jpg"  preload="auto" controls="controls">
   <source src="https://sourl.cn/yH7pwA" type="video/mp4" />
   </object>
 </video>
