--- a/vlog/vlog6.html
+++ b/vlog/vlog6.html
@@ -72,7 +72,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7aafb579j31u80tohdv.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7aafb579j31u80tohdv.jpg"  preload="auto" controls="controls">
   <source src="https://sourl.cn/UCQFYE" type="video/mp4" />
   </object>
 </video>
