--- a/vlog/vlog7.html
+++ b/vlog/vlog7.html
@@ -74,7 +74,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7aenklhxj31r40u01kx.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7aenklhxj31r40u01kx.jpg"  preload="auto"  controls="controls">
   <source src="https://sourl.cn/S4XQgu" type="video/mp4" />
   </object>
 </video>
