--- a/vlog/vlog8.html
+++ b/vlog/vlog8.html
@@ -71,7 +71,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7anudglpj31vl0u0qv5.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7anudglpj31vl0u0qv5.jpg"  preload="auto" controls="controls">
   <source src="https://sourl.cn/4L3MDr" type="video/mp4" />
   </object>
 </video>
