--- a/vlog/220123-HZ/index.html
+++ b/vlog/220123-HZ/index.html
@@ -60,31 +60,25 @@ var _hmt = _hmt || [];
 
         <article>
         <!--文章标题-->
-        <h1 id="article-title">🎓 Life Film|Graduation 🎓 </h1>
+        <h1 id="article-title">🎓 Life Film|Hangzhou </h1>
         <br>
 <div>
 
 
        <center>
         <video
-        id="my-video"
         class="video-js"
         controls
         preload="auto"
-        width="95%"
+        width="98%"
         poster="https://tva1.sinaimg.cn/large/008i3skNgy1gyni83x86yj31hc0u0mxf.jpg"
-        data-setup="{}"
-      >
+       >
         <source src="https://ks-xpc4.xpccdn.com/6f2675a5-9a20-4804-a452-95df233e4132.mp4" type="video/mp4" />
         <source src="https://ks-xpc4.xpccdn.com/6f2675a5-9a20-4804-a452-95df233e4132.mp4" type="video/webm" />
-        <p class="vjs-no-js">
-          To view this video please enable JavaScript, and consider upgrading to a
-          web browser that
-          <a href="https://videojs.com/html5-video-support/" target="_blank"
-            >supports HTML5 video</a
-          >
-        </p>
+        
       </video>
+
+      <script src="https://vjs.zencdn.net/7.17.0/video.min.js"></script>
 	</center>   
 
     <br>
