--- a/vlog/vlog001.html
+++ b/vlog/vlog001.html
@@ -67,7 +67,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="95%" poster="https://i.loli.net/2020/04/27/VC6wJtfKv8ch1Yg.png" controls="controls">
+<video width="95%" poster="https://i.loli.net/2020/04/27/VC6wJtfKv8ch1Yg.png"  preload="auto" controls="controls">
   <source src="https://sourl.cn/bqSxAX" type="video/mp4" />
   </object>
 </video>
