--- a/vlog/vlog1.html
+++ b/vlog/vlog1.html
@@ -75,7 +75,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge79phzwjij31uu0u01kz.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge79phzwjij31uu0u01kz.jpg"  preload="auto" controls="controls">
   <source src="https://sourl.cn/HZ7mes" type="video/mp4" />
   </object>
 </video>
