--- a/vlog/vlog19.html
+++ b/vlog/vlog19.html
@@ -71,7 +71,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1gepgeimbyej31jb0u04qr.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1gepgeimbyej31jb0u04qr.jpg"  preload="auto" controls="controls">
   <source src="https://sourl.cn/pXUtsD" type="video/mp4" />
   </object>
 </video>
