--- a/vlog/vlog2.html
+++ b/vlog/vlog2.html
@@ -65,7 +65,8 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge79znaupoj315m0j87to.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge79znaupoj315m0j87to.jpg"  preload="auto" 
+controls="controls">
   <source src="https://sourl.cn/yUGzTR" type="video/mp4" />
   </object>
 </video>
