--- a/vlog/vlog5.html
+++ b/vlog/vlog5.html
@@ -67,7 +67,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="92%"  poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7a6smi7qj31ri0u0kjn.jpg" controls="controls">
+<video width="92%"  poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7a6smi7qj31ri0u0kjn.jpg"  preload="auto"  controls="controls">
   <source src="https://sourl.cn/YYLRgV" type="video/mp4" />
   </object>
 </video>
