--- a/vlog/vlog9.html
+++ b/vlog/vlog9.html
@@ -73,7 +73,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7as8xi6zj31z60sq4qr.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7as8xi6zj31z60sq4qr.jpg"  preload="auto" controls="controls">
   <source src="https://sourl.cn/FihQdM" type="video/mp4" />
   </object>
 </video>
