--- a/vlog/220123-HZ/index.html
+++ b/vlog/220123-HZ/index.html
@@ -13,7 +13,7 @@
     <meta property="og:site_name" content="The Art Gallery Guardian">
     <meta property="article:tag" content="Flim, life">
 <!--页面标题-->
-    <title>Life Film|Graduation</title>  
+    <title>Life Film|Hangzhou</title>  
 <!-- 百度统计-->
 <script>
 var _hmt = _hmt || [];
@@ -60,7 +60,7 @@ var _hmt = _hmt || [];
 
         <article>
         <!--文章标题-->
-        <h1 id="article-title">🎓 Life Film|Hangzhou </h1>
+        <h1 id="article-title">Life Film|Hangzhou </h1>
         <br>
 <div>
 
