--- a/pages/film.html
+++ b/pages/film.html
@@ -77,7 +77,7 @@ var _hmt = _hmt || [];
         <br></br>
         <br></br>
 	        <center>
-         <a href="https://link.ruiprime.cn/icloud-photo"> <img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/takepic.svg"/></a>
+         <a href="https://link.ruiprime.cn/icloud-photo"> <img src="/files/wang/rfilm.svg"/></a>
           </center>  
           <br></br>
           <br></br>
