--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -74,6 +74,11 @@ var _hmt = _hmt || [];
     <td class="right"><time>2022-01-23</time></td>
 </tr>
 
+<tr>
+    <td><a href="/vlog/2021-12-30-my2021.html"><cite> MY 2021</cite></a></td>
+    <td class="right"><time>2021-12-30</time></td>
+</tr>
+
  <tr>
     <td><a href="/vlog/2021-06-18-graduation.html"><cite> life film|Graduation</cite></a></td>
     <td class="right"><time>2021-06-18</time></td>
