--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -75,7 +75,7 @@ var _hmt = _hmt || [];
 </tr>
 
 <tr>
-    <td><a href="/vlog/2021-12-30-my2021.html"><cite> MY 2021</cite></a></td>
+    <td><a href="/vlog/2021-12-30-my2021.html"><cite> My Year 2021 </cite></a></td>
     <td class="right"><time>2021-12-30</time></td>
 </tr>
 
