--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-  
+ <!-- 5la统计 -->	
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id: "Jf9Sxp0SnnBDBT7V",ck: "Jf9Sxp0SnnBDBT7V"})</script>  
+	
  
   <!-- toggle selected publications 挑选的期刊 -->
   <script>
