--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ var _hmt = _hmt || [];
     <br>
   </br>
 <!-- 首页头像 -->
-   <img width="200" height="200" src="/pic/faces_logo.svg" style="border-radius:50%;max-width:80%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl">
+   <img width="210" height="210" src="https://jihulab.com/biowr/PicBed/-/raw/main/pictures/2022/05/faces_logo.svg" style="border-radius:50%;max-width:80%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl">
 	</div>
   <div class="intro-right">
     
