--- a/pages/tools-back.html
+++ b/pages/tools-back.html
@@ -34,7 +34,7 @@ var _hmt = _hmt || [];
 <!--pass-->	
 <script language="JavaScript">
 <!--
-var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" and reply "pwd" to get the password.','');
+var password="";password=prompt('🚀Follow the WeChat public account "GeneNote" and reply "pwd" to get the password.','');
 	if (password != '9757')   
 	{alert("❌Sorry，the password is incorrect, bye～👋");    
 	 window.opener=null; window.close();}  // 密码不正确就关闭
