--- a/pages/notebook.html
+++ b/pages/notebook.html
@@ -24,7 +24,7 @@ var _hmt = _hmt || [];
     <meta property="article:tag" content="">
     <title>Notebook</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
     
 
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
