--- a/vlog/2022-0506-Dushulake/index.html
+++ b/vlog/2022-0506-Dushulake/index.html
@@ -28,7 +28,7 @@ var _hmt = _hmt || [];
 
 
  <link href="https://vjs.zencdn.net/7.17.0/video-js.css" rel="stylesheet"> 
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+ <link rel="stylesheet" href="/css/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
  <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
  <link rel="stylesheet" href="/css/blog.css" crossorigin="anonymous">
@@ -70,7 +70,7 @@ var _hmt = _hmt || [];
         controls
         preload="auto"
         width="98%"
-        poster="https://cdn.jsdelivr.net/gh/ruiprime/picture/picgo/20220509185944.png"
+        poster="https://fastly.jsdelivr.net/gh/ruiprime/picture/picgo/20220509185944.png"
        >
         <source src="https://jihulab.com/biowr/VLOG-File/-/raw/main/20220502-LifeFilm-Dushu_Lake_Park.mp4" type="video/mp4" />
         
