--- a/my.html
+++ b/my.html
@@ -13,8 +13,8 @@
   <meta name="description" content="The personal webpage of Rui Wang.">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css" crossorigin="anonymous">
   <!-- Do not remove katex render. Index page is a idpage --> 
-  <link rel="stylesheet" href="/css/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css"  crossorigin="anonymous">
+  <script defer src="https://fastly.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.js"  crossorigin="anonymous"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       var macros={
