--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <meta property="article:tag" content="Flim, life">
     <title>About</title> 
  <!--页面标题-->
-    <link rel="stylesheet" href="/css/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/katex.min.css"  crossorigin="anonymous">
 	
 
 <!-- 百度统计-->
