--- a/pages/filmpage/film-02roll.html
+++ b/pages/filmpage/film-02roll.html
@@ -71,7 +71,7 @@ var _hmt = _hmt || [];
 <p><img src="https://jihulab.com/biowr/PicBed/-/raw/main/pictures/2022/06/000051630041.jpg" referrerpolicy="no-referrer" alt="000051630041"></p>
 <h3></h3>
 
-<p><img src="https://jihulab.com/biowr/PicBed/-/raw/main/pictures/2022/06/000051630016.jpg" referrerpolicy="no-referrer" alt="000051630016"></p>
+<p><img src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/000051630016.jpg" referrerpolicy="no-referrer" alt="000051630016"></p>
 <h3></h3>
 
 <p><img src="https://jihulab.com/biowr/PicBed/-/raw/main/pictures/2022/06/000051630017.jpg" referrerpolicy="no-referrer" alt="000051630017"></p>
