--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
- <!-- 5la统计 -->	
-<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-<script>LA.init({id: "Jf9Sxp0SnnBDBT7V",ck: "Jf9Sxp0SnnBDBT7V"})</script>  
-	
+
  
   <!-- toggle selected publications 挑选的期刊 -->
   <script>
@@ -107,7 +104,7 @@ var _hmt = _hmt || [];
 <p> &ensp; </p>
 <p>Hello! I'm Rui Wang. Thank you for stopping by my site.</p>
 <p>During the day, I am a student at USTS.My research interests are bioinformatics.I'm also interested in more applied problems with nice theoretical components.I'm a serial side project maker. In the last 3 years, I've started 13 side projects in many different areas. Few are wildly popular. Many are dead. Several of them are still hanging around today.</p>
-<p>Thank you for stopping by! I would love to learn what brought you here. I want to hear your stories, your interests, and your questions.You can contact me through email <a href="mailto:biowr@qq.com"><samp itemprop="email">biowr@qq.com</samp></a>.</p>
+<p>Thank you for stopping by! I would love to learn what brought you here. I want to hear your stories, your interests, and your questions.You can contact me through email <a href="mailto:i@ruiprime.cn"><samp itemprop="email">i@ruiprime.com</samp></a>.</p>
 <br>
 </br>
    
