--- a/pages/test.html
+++ b/pages/test.html
@@ -72,14 +72,22 @@ var player = new Aliplayer({
   "source": "//ali.cdn.kaiyanapp.com/1619494320171_26b8c3ab_1280x720.mp4?auth_key=1660923223-0-0-0be42349995649d0aa832287ae003eec",
   "width": "100%",
   "height": "350px",
-  "autoplay": true,
+  "autoplay": false,
   "isLive": false,
+  "cover": "//tva1.sinaimg.cn/large/007S8ZIlgy1gjpzit5gipj31g60sgqv5.jpg",
   "rePlay": false,
   "playsinline": true,
-  "preload": true,
+  "preload": false,
+  "language": "en-us",
   "controlBarVisibility": "hover",
   "useH5Prism": true,
   "skinLayout": [
+    {
+      "name": "bigPlayButton",
+      "align": "blabs",
+      "x": 30,
+      "y": 80
+    },
     {
       "name": "H5Loading",
       "align": "cc"
