--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -68,7 +68,17 @@ var _hmt = _hmt || [];
     <td><a href="https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzUyNzQwMjkyMA==&action=getalbum&album_id=1798211811293396994&channel_session_id=&sessionid=1594770113&scene=168&subscene=136" target="_blank"  ><cite>Wechat Channel</cite></a></td>
     <td class="right"><time>2016-07-01</time></td>
 </tr>
-
+	
+<tr>
+    <td><a href="/vlog/2022-10-06-Zhoushan.html"><cite> life film|Zhoushan</cite></a></td>
+    <td class="right"><time>2022-10-06</time></td>
+</tr>
+	
+<tr>
+    <td><a href="/vlog/2022-0915-Landscape-Shot.html"><cite> The tree-Landscape Shot</cite></a></td>
+    <td class="right"><time>2022-04-23</time></td>
+</tr>
+	
 <tr>
     <td><a href="/vlog/2022-0506-Dushulake"><cite> life film|Dushu Lake</cite></a></td>
     <td class="right"><time>2022-04-23</time></td>
